fix wrappter title and add active btn css

--- a/test2/src/sass/_styles.scss
+++ b/test2/src/sass/_styles.scss
@@ -104,6 +104,7 @@ background: #F9FBFF;
     padding-left: 38px;
     padding-top: 40px;
     padding-bottom: 14px;
+    padding-right: 35px;
 }
 .wrapper {
     display: grid;
@@ -148,6 +149,7 @@ background: #F9FBFF;
         border: 1px solid #00B087;
         background: rgba(22, 192, 152, 0.38);
             }
+   
     &__btn-inactive{
         
         height: 29px;
@@ -211,6 +213,26 @@ font-weight: 500;
 line-height: 100%; 
 letter-spacing: -0.12px;
 }
+.swtch-btn-active
+{display: inline-flex;
+    padding: 6px 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 4px;
+    border: 1px solid #5932EA;
+    background: #5932EA;
+    color: #FFF;
+font-family: Poppins;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; /* 12px */
+letter-spacing: -0.12px;
+margin-right: 12px;
+}
+
 
 
 //side bar
