--- a/test2/src/sass/main.css
+++ b/test2/src/sass/main.css
@@ -107,6 +107,7 @@
   padding-left: 38px;
   padding-top: 40px;
   padding-bottom: 14px;
+  padding-right: 35px;
 }
 
 .wrapper {
@@ -226,6 +227,35 @@
   font-weight: 500;
   line-height: 100%;
   letter-spacing: -0.12px;
+}
+
+.swtch-btn-active {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 6px 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid #5932EA;
+  background: #5932EA;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; /* 12px */
+  letter-spacing: -0.12px;
+  margin-right: 12px;
 }
 
 .side {
